@@ -1,10 +1,9 @@
 var docxReader = require("./docx/docx-reader");
 var DocumentConverter = require("./document-to-html").DocumentConverter;
-var styleMapping = require("./style-reader").readStyle;
+var readStyle = require("./style-reader").readStyle;
 var readOptions = require("./options-reader").readOptions;
 
 exports.convertToHtml = convertToHtml;
-exports.styleMapping = styleMapping;
 
 function convertToHtml(input, options) {
     var fullOptions = readOptions(options);
@@ -19,7 +18,9 @@ function convertToHtml(input, options) {
 }
 
 function convertDocumentToHtml(documentResult, options) {
-    var documentConverter = new DocumentConverter(options);
+    var parsedOptions = Object.create(options);
+    parsedOptions.styleMap = (options.styleMap || []).map(readStyle);
+    var documentConverter = new DocumentConverter(parsedOptions);
     return documentResult.flatMapThen(function(document) {
         return documentConverter.convertToHtml(document);
     });
